--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <form name="empleados" class="formulario" action="informacion.php" method="POST">
     <table class="tabla" border="1">
       <tr>
-        <td>identidicacion_Empleado</td>
+        <td>identificacion_Empleado</td>
         <td> <input type="text" name="identificacion"</td>
       </tr>
       <tr>
